crates/carta/tests/snapshots/golden_writer__beamer__common__ordered-example.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{enumerate}
[(1)]
\tightlist
\item
  first
\item
  second
\end{enumerate}
\end{frame}
