crates/carta/tests/snapshots/golden_writer__beamer__common__ordered-lower-alpha.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{enumerate}
[a.]
\tightlist
\item
  one
\item
  two
\end{enumerate}
\end{frame}
