crates/carta/tests/snapshots/golden_writer__beamer__common__ordered-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{enumerate}
\item
  outer

  \begin{enumerate}
  \tightlist
  \item
    inner one
  \item
    inner two
  \end{enumerate}
\end{enumerate}
\end{frame}
