crates/carta/tests/snapshots/golden_writer__beamer__common__ordered-one-paren.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{enumerate}
[1)]
\tightlist
\item
  one
\item
  two
\end{enumerate}
\end{frame}
