crates/carta/tests/snapshots/golden_writer__beamer__common__ordered-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{enumerate}
\setcounter{enumi}{4}
\tightlist
\item
  five
\item
  six
\end{enumerate}
\end{frame}
