crates/carta/tests/snapshots/golden_writer__beamer__common__ordered-upper-alpha.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
A. one B. two
\end{frame}
