crates/carta/tests/snapshots/golden_writer__beamer__common__ordered-upper-roman.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
I. one II. two
\end{frame}
