crates/carta/tests/snapshots/golden_writer__beamer__common__para-wrap.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
This is a deliberately long paragraph with enough words that the writer
must wrap it across the fill column boundary at least once or twice.
\end{frame}
