crates/carta/tests/snapshots/golden_writer__beamer__common__paragraph.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
a simple paragraph with words
\end{frame}
