crates/carta/tests/snapshots/golden_writer__beamer__common__quoted-smart.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
She said ``hello'' and `hi'.
\end{frame}
